lox-tests/tests/function/missing_arguments.stderr
ERROR: Expected 2 arguments in function call but got 1
 --> 5:1
  |
5 | f(1); // expect runtime error: Expected 2 arguments but got 1.
  | ^--^
